k8s/gateway-service-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: k8s
  labels:
    app: gateway-service
spec:
  selector:
    app: gateway-service
  type: LoadBalancer
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: k8s
  labels:
    app: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - image: lsefiane/gateway-service:latest
          name: gateway-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
