k8s/openzipkin-zipkin.yml
apiVersion: v1
kind: Service
metadata:
  name: openzipkin-zipkin
  namespace: k8s-dev
  labels:
    app: openzipkin-zipkin
spec:
  selector:
    app: openzipkin-zipkin
  ports:
    - name: "9411"
      port: 9411
      targetPort: 9411
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openzipkin-zipkin
  namespace: k8s-dev
  labels:
    app: openzipkin-zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openzipkin-zipkin
  template:
    metadata:
      labels:
        app: openzipkin-zipkin
    spec:
      containers:
        - image: openzipkin/zipkin:latest
          name: openzipkin-zipkin
          ports:
            - containerPort: 9411
