k8s/publisher-service.yml
apiVersion: v1
kind: Service
metadata:
  name: publisher-service
  namespace: k8s
  labels:
    app: publisher-service
spec:
  selector:
    app: publisher-service
  ports:
    - name: "8080"
      port: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publisher-service
  namespace: k8s
  labels:
    app: publisher-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: publisher-service
  template:
    metadata:
      labels:
        app: publisher-service
    spec:
      containers:
        - image: lsefiane/publisher-service:latest
          name: publisher-service
