k8s/subscriber-service.yml
apiVersion: v1
kind: Service
metadata:
  name: subscriber-service
  namespace: k8s
  labels:
    app: subscriber-service
spec:
  selector:
    app: subscriber-service
  ports:
    - name: "8080"
      port: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscriber-service
  namespace: k8s
  labels:
    app: subscriber-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: subscriber-service
  template:
    metadata:
      labels:
        app: subscriber-service
    spec:
      containers:
        - image: lsefiane/subscriber-service:latest
          name: publisher-service
