k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: k8s-dev
spec:
  rules:
    - host: publisher-subscriber.com
      http:
        paths:
          - pathType: Prefix
            path: /publisher
            backend:
              service:
                name: publisher-service
                port:
                  number: 8080
