k8s/publisher-subscriber-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: publisher-subscriber-ingress
  namespace: k8s-dev
spec:
  rules:
    - host: publisher-subscriber.com
      http:
        paths:
          - pathType: Prefix
            path: /publisher
            backend:
              service:
                name: publisher-service
                port:
                  number: 8080
